getter for resume on experience ctrl

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="scripts/app.js"></script>
-        <script type="text/javascript" src="scripts/controllers/NavCtrl.js"></script>
+        <script type="text/javascript" src="scripts/services/ResumeService.js"></script>
+        <script type="text/javascript" src="scripts/controllers/ExperienceCtrl.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
     </head>
-    <body class="container" ng-app="Portfolio">
+    <body class="container-fluid" ng-app="Portfolio">
         <div class="row">
             <ul class="menu col-sm-3">
                 <li><a href="#experience">Experience</a></li>
