adding link to blog

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul class="menu col-sm-3">
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#github">GitHub</a></li>
+                <li><a href="http://www.socalledprogrammer.com" target="_blank">Blog</a></li>
             </ul>
             <div class="col-sm-9">
               <div ui-view></div>
