styling experiences as cards

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
         <script type="text/javascript" src="scripts/controllers/ExperienceCtrl.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="css/base.css" rel="stylesheet" />
     </head>
     <body class="container-fluid" ng-app="Portfolio">
         <div class="row">
-            <ul class="menu col-sm-3">
+            <ul class="menu col-sm-2">
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#github">GitHub</a></li>
                 <li><a href="http://www.socalledprogrammer.com" target="_blank">Blog</a></li>
             </ul>
-            <div class="col-sm-9">
+            <div class="col-sm-10">
               <div ui-view></div>
             </div>
         </div>
