adding nav bar to top of page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
         <link href="css/base.css" rel="stylesheet" />
     </head>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <ul class="nav navbar-nav">
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#github">GitHub</a></li>
+            <li><a href="http://www.socalledprogrammer.com" target="_blank">Blog</a></li>
+        </ul>
+    </nav>
     <body class="container-fluid" ng-app="Portfolio">
         <div class="row">
-            <ul class="menu col-sm-2">
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#github">GitHub</a></li>
-                <li><a href="http://www.socalledprogrammer.com" target="_blank">Blog</a></li>
-            </ul>
+            <div class="col-sm-2">
+
+            </div>
             <div class="col-sm-10">
               <div ui-view></div>
             </div>
