--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     <body class="container-fluid" ng-app="Portfolio">
         <div class="row">
             <div class="col-sm-2">
-
+                <img class="media-object img-circle center-block" data-src="holder.js/100x100" alt="Sean Cuevo" src="http://s.gravatar.com/avatar/f96fc33985bf6d513d7b2e53c0642d5e?s=150" itemprop="image">
+                <h1>Sean Cuevo</h1>
+                <h4>Web Developer</h4>
+                <ul class="fa-ul contact-info">
+                    <li><i class="fa fa-li fa-location-arrow"></i>Denver, Colorado, USA</li>
+                    <li><i class="fa fa-li fa-mobile"></i>845.480.2972</li>
+                    <li><i class="fa fa-li fa-envelope"></i><a href="mailto:sean.cuevo@gmail.com">sean.cuevo@gmail.com</a></li>
+                </ul>
             </div>
             <div class="col-sm-10">
               <div ui-view></div>
