--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <ul class="nav navbar-nav">
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#github">GitHub</a></li>
+            <li><a href="https://github.com/seanpat09" target="_blank">GitHub</a></li>
             <li><a href="http://www.socalledprogrammer.com" target="_blank">Blog</a></li>
         </ul>
     </nav>
@@ -34,8 +34,8 @@
         <div class="row">
             <div class="col-sm-2">
                 <img class="media-object img-circle center-block" data-src="holder.js/100x100" alt="Sean Cuevo" src="http://s.gravatar.com/avatar/f96fc33985bf6d513d7b2e53c0642d5e?s=150" itemprop="image">
-                <h1>Sean Cuevo</h1>
-                <h4>Web Developer</h4>
+                <h1 class="name">Sean Cuevo</h1>
+                <h4 class="profession">Web Developer</h4>
                 <ul class="fa-ul contact-info">
                     <li><i class="fa fa-li fa-location-arrow"></i>Denver, Colorado, USA</li>
                     <li><i class="fa fa-li fa-mobile"></i>845.480.2972</li>
@@ -47,4 +47,6 @@
             </div>
         </div>
     </body>
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Cabin' rel='stylesheet' type='text/css'>
 </html>
